fix: update translation for total income, adjust overflow behavior in Friends component styles, and optimize imports across multiple components

--- a/src/components/Friends.module.scss
+++ b/src/components/Friends.module.scss
@@ -7,6 +7,6 @@
   gap: 20px;
 
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   padding-bottom: 20px;
 }
