--- a/src/components/FriendsRefferalHistory/FriendsRefferalHistory.module.scss
+++ b/src/components/FriendsRefferalHistory/FriendsRefferalHistory.module.scss
@@ -11,6 +11,7 @@
   gap: 24px;
   flex: 1;
   overflow: auto;
+  min-height: 200px;
 
   &__header {
     @include flexCol(space-between, flex-start);
